<resources>
    <string name="app_name">The Habit Game</string>
    <string name="action_settings">Settings</string>
    <string name="add_new_habit">Add new Habit</string>
    <string name="habit_name">Habit name</string>
    <string name="description_optional">Description(optional)</string>
    <string name="habit_color">Habit color</string>
    <string name="apply">Apply</string>
    <string name="description">Description</string>
    <string name="EXTRA_DETAIL_ID" translatable="false">pl.c0.sayard.thehabitgame.extra.DETAIL_ID</string>
    <string name="EXTRA_DETAIL_NAME" translatable="false">pl.c0.sayard.thehabitgame.DETAIL_NAME</string>
    <string name="EXTRA_DETAIL_COLOR" translatable="false">pl.c0.sayard.thehabitgame.DETAIL_COLOR</string>
    <string name="EXTRA_DETAIL_DESCRIPTION" translatable="false">pl.c0.sayard.thehabitgame.DETAIL_DESCRIPTION</string>
    <string name="EXTRA_DETAIL_STREAK" translatable="false">pl.c0.sayard.thehabitgame.DETAIL_STREAK</string>
    <string name="EXTRA_DETAIL_DAYS_LEFT" translatable="false">pl.c0.sayard.thehabitgame.extra.DETAIL_DAYS_LEFT</string>
    <string name="EXTRA_UPDATE_ID" translatable="false">pl.c0.sayard.thehabitgame.extra.UPDATE_ID</string>
    <string name="EXTRA_NOTIFICATION_ID" translatable="false">pl.c0.sayard.thehabitgame.extra.NOTIFICATION_ID</string>
    <string name="preference_button_first_click" translatable="false">pl.c0.sayard.thehabitgame.PREFERENCE_BUTTON_FIRST_CLICK</string>
    <string name="preference_day_check_key" translatable="false">pl.c0.sayard.thehabitgame.PREFERENCE_DAY_CHECK_KEY</string>
    <string name="your_streak">Your streak</string>
    <string name="action_delete_habit">Delete habit</string>
    <string name="done_for_today">Done for today</string>
    <string name="update_habit">Update habit</string>
    <string name="notifications">Notifications</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="need_more_work">You need a little bit more work! Keep going!</string>
    <string name="great_work">Great work! Keep it up!</string>
    <string name="deleting_failed">Deleting has failed. Please try again.</string>
    <string name="do_you_want_to_delete">Are you sure you want to delete this habit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="good_job">Good job!</string>
    <string name="updating_failed">Updating has failed. Please try again.</string>
    <string name="youre_done_for_today">You\'re done for today, come back tommorow.</string>
    <string name="name_field_error">Name field must not be empty</string>
    <string name="error_occurred">An error has occurred. Please try again.</string>
    <string name="habit_added">Habit added successfully</string>
    <string name="days_left">Days left</string>
    <string name="next">NEXT</string>
    <string name="got_it">GOT IT</string>
    <string name="showcase_sequence_1_id" translatable="false">pl.c0.sayard.thehabitgame.SHOWCASE_SEQUENCE_1</string>
    <string name="showcase_sequence_1_1">Hi! Thanks for installing the app!</string>
    <string name="showcase_sequence_1_2">This automated tour will guide you through the key features!</string>
    <string name="showcase_sequence_1_3">Here you have the list of all habits.</string>
    <string name="showcase_sequence_1_4">You can add new ones here.</string>
    <string name="showcase_sequence_1_5">You can also view the details by clicking on the name of the habit. Go ahead and try it now.</string>
    <string name="showcase_sequence_2_id" translatable="false">pl.c0.sayard.thehabitgame.SHOWCASE_SEQUENCE_2</string>
    <string name="showcase_sequence_2_1">On this screen you can view details and track progress of developing your habit.</string>
    <string name="showcase_sequence_2_2">You can see details such as name of the habit and description here.</string>
    <string name="showcase_sequence_2_3">It takes approximately 66 days to develop a new habit.</string>
    <string name="showcase_sequence_2_4">You can track your progress so far here...</string>
    <string name="showcase_sequence_2_5">...and here.</string>
    <string name="showcase_sequence_2_6">You can also set up reminders and edit the habit from the menu.</string>
    <string name="showcase_sequence_2_7">If you\'re done with your habit for a day. You can mark it by clicking this button.</string>
    <string name="habit_developed_dialog_text">You can now stop developing the habit or you can have one more week.</string>
    <string name="im_done">I\'m done</string>
    <string name="give_me_one_more_week">Give me one more week</string>
    <string name="EXTRA_DETAIL_CURR_DAYS_LEFT" translatable="false">pl.c0.sayard.thehabitgame.extra.CURR_DAYS_LEFT</string>
    <string name="EXTRA_DETAIL_SHOULD_SHOW_DELETING_DIALOG" translatable="false">pl.c0.sayard.thehabitgame.extra.SHOULD_SHOW_DELETING_DIALOG</string>
    <string name="got_achievement">You got an achievement!</string>
    <string name="EXTRA_DELETING_DIALOG_MESSAGE" translatable="false">pl.c0.sayard.thehabitgame.extra.DELETING_DIALOG_MESSAGE</string>
    <string name="EXTRA_DELETING_DIALOG_POSITIVE_BUTTON" translatable="false">pl.c0.sayard.thehabitgame.extra.DELETING_DIALOG_POSITIVE_BUTTON</string>
    <string name="EXTRA_DELETING_DIALOG_NEGATIVE_BUTTON" translatable="false">pl.c0.sayard.thehabitgame.extra.DELETING_DIALOG_NEGATIVE_BUTTON</string>
    <string name="EXTRA_DELETING_DIALOG_ACTION_DELETE" translatable="false">pl.c0.sayard.thehabitgame.extra.DELETING_DIALOG_ACTION_DELETE</string>
    <string name="EXTRA_DELETING_DIALOG_HABIT_ID" translatable="false">pl.c0.sayard.thehabitgame.extra.DELETING_DIALOG_HABIT_ID</string>
    <string name="today_s_list">Today\'s list</string>
    <string name="you_re_done_for_today">You\'re done for today</string>
    <string name="set_notification">Set Notification</string>
    <string name="cancel_notification">Cancel Notification</string>
    <string name="EXTRA_LATITUDE" translatable="false">pl.c0.sayard.thehabitgame.extra.LATITUDE</string>
    <string name="EXTRA_LONGITUDE" translatable="false">pl.c0.sayard.thehabitgame.extra.LONGITUDE</string>
    <string name="geo_based_notifications">Geo based notifications</string>
</resources>
