<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.c0.sayard.thehabitgame.HabitDetailActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/habit_detail_name"
        android:textSize="32sp"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:shadowColor="@android:color/black"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:paddingTop="8dp"
        android:textSize="24sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/habit_detail_desc"
        android:paddingTop="8dp"
        android:layout_marginLeft="8dp"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_streak"
        android:paddingTop="8dp"
        android:textSize="24sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/habit_detail_streak"
        android:paddingTop="8dp"
        android:layout_marginLeft="8dp"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/habit_detail_streak_desc"
        android:layout_marginLeft="8dp"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Days left"
        android:paddingTop="8dp"
        android:textSize="24sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/habit_detail_days_left"
        android:layout_marginLeft="8dp"
        android:textSize="16sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="?attr/colorPrimary"
            android:textColor="@android:color/white"
            android:text="@string/done_for_today"
            android:onClick="habitPerformed"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>



</LinearLayout>
